modified yarn builder
