# src/schemas/auth.ts
@@ -20,3 +20,13 @@ export const authVerifySchema = z.object({
     email: z.string().email({ message: "Invalid email address" }),
     otpCode: z.string()
 });
+
+
+export const authResetPasswordSchema = z.object({
+    email: z.string().email({ message: "Invalid email address" }),
+    otpCode: z.string(),
+    password: z
+        .string()
+        .min(6, 'Password must be at least 6 characters long')
+        .regex(/^[a-zA-Z0-9]+$/, 'Password must be alphanumeric'),
+})
